--- a/ini/stm32f1.ini
+++ b/ini/stm32f1.ini
@@ -133,6 +133,34 @@ debug_tool                  = jlink
 upload_protocol             = jlink
 
 #
+# Anycubic boards (STM32F103RET6)
+#
+[env:STM32F103RE_ac_tri_f1]
+platform             = ${common_stm32.platform}
+extends              = common_stm32
+board                = ac_tri_f103re
+#board_build.core     = stm32
+#board_build.offset   = 0x8000
+board_build.firmware = ac_tri_f1.bin
+#lib_deps             = SPI
+#lib_ignore           = ${common_stm32.lib_ignore}
+lib_ignore           = SoftwareSerialM
+build_type           = debug
+build_flags          = ${common_stm32.build_flags}
+  -DDEBUG_LEVEL=0
+  -DVECT_TAB_OFFSET=0x8000
+  -DLD_FLASH_OFFSET=0x8000
+  -DSTM32F1xx
+  -DMCU_STM32F103RE
+  -DHSE_VALUE=8000000U
+  -DHAL_SD_MODULE_ENABLED
+  -O0
+#  -DVECT_TAB_ADDR=0x8008000
+#  -DTIMER_SERIAL     = TIM3
+upload_protocol      = jlink
+monitor_speed        = 115200
+
+#
 # BigTree SKR Mini E3 V2.0 & DIP / SKR CR6 (STM32F103RET6 ARM Cortex-M3)
 #
 #   STM32F103RE_btt ............. RET6
